--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="/Bootstrap 5/Project1.html">Home <span
+                    <a class="nav-link" href="index.html">Home <span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Bootstrap 5/about.html">About US</a>
+                    <a class="nav-link" href="about.html">About US</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -49,7 +49,7 @@
                     </div>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/Bootstrap 5/contact.html">Contact US</a>
+                    <a class="nav-link" href="contact.html">Contact US</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
