--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Bootstrap 5/about.html">About US</a>
+                    <a class="nav-link" href="about.html">About US</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -49,7 +49,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Bootstrap 5/contact.html">Contact US</a>
+                    <a class="nav-link" href="contact.html">Contact US</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -162,7 +162,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/Images/luca-bravo-I4ywJmImdPM-unsplash.jpg" style="height : 80vh" class="d-block w-100"
+                <img src="luca-bravo-I4ywJmImdPM-unsplash.jpg" style="height : 80vh" class="d-block w-100"
                     alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Welcome To LearnToCode</h5>
@@ -174,7 +174,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/Images/dlanor-s-2xEQDxB0ss4-unsplash.jpg" style="height : 80vh" class="d-block w-100"
+                <img src="dlanor-s-2xEQDxB0ss4-unsplash.jpg" style="height : 80vh" class="d-block w-100"
                     alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>A Heaven For Coding Enthusiasts</h5>
@@ -186,7 +186,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/Images/hitesh-choudhary-pMnw5BSZYsA-unsplash.jpg" style="height : 80vh" class="d-block w-100"
+                <img src="hitesh-choudhary-pMnw5BSZYsA-unsplash.jpg" style="height : 80vh" class="d-block w-100"
                     alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Get All Latest News and Updates</h5>
@@ -223,7 +223,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img src="/Images/procreator-ux-design-studio-VzJjPuk53sk-unsplash.jpg"
+                        <img src="procreator-ux-design-studio-VzJjPuk53sk-unsplash.jpg"
                             class="bd-placeholder-img" width="200" height="250">
                     </div>
                 </div>
@@ -240,7 +240,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img src="/Images/altumcode-mCj7UinqOYQ-unsplash.jpg" class="bd-placeholder-img" width="200"
+                        <img src="altumcode-mCj7UinqOYQ-unsplash.jpg" class="bd-placeholder-img" width="200"
                             height="250">
                     </div>
                 </div>
@@ -264,7 +264,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img src="/Images/nikita-katsevich-QXDJGPZTwxs-unsplash.jpg" class="bd-placeholder-img"
+                        <img src="nikita-katsevich-QXDJGPZTwxs-unsplash.jpg" class="bd-placeholder-img"
                             width="200" height="250">
                     </div>
                 </div>
@@ -281,7 +281,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img src="/Images/niclas-illg-FJ5e_2f96h4-unsplash.jpg" class="bd-placeholder-img"
+                        <img src="niclas-illg-FJ5e_2f96h4-unsplash.jpg" class="bd-placeholder-img"
                             width="200" height="250">
                     </div>
                 </div>
